Refactor ping_controller packages
