# controllers/ping_controller/get_ping.go
@@ -1,8 +1,8 @@
 package ping_controller
 
 import (
-    _ "gin-rest-api/swagger/responses/ping_controller/get_ping"
-    "gin-rest-api/serializers/ping_serializer"
+    _ "gin-rest-api/responses/ping_controller/get_ping_response"
+    "gin-rest-api/serializers/ping_controller/get_ping_serializer"
     "gin-rest-api/utils/response/response_ok"
     "github.com/gin-gonic/gin"
 )
@@ -13,12 +13,12 @@ import (
 // @Summary GET ping used for healthcheck
 // @Accept json
 // @Produce json
-// @Success 200	{object} get_ping.SuccessResponse
+// @Success 200	{object} get_ping_response.Response
 func GetPing() gin.HandlerFunc {
     return func(context *gin.Context) {
         response_ok.JSON(
             context,
-            ping_serializer.Serializer(),
+            get_ping_serializer.Serializer(),
         )
     }
 }
