# docs/swagger.json
@@ -20,7 +20,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/get_ping.SuccessResponse"
+                            "$ref": "#/definitions/get_ping_response.Response"
                         }
                     }
                 }
@@ -86,11 +86,20 @@
                 }
             }
         },
-        "get_ping.SuccessResponse": {
+        "get_ping_response.DataResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "pong"
+                }
+            }
+        },
+        "get_ping_response.Response": {
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/ping_response.Response"
+                    "$ref": "#/definitions/get_ping_response.DataResponse"
                 }
             }
         },
@@ -102,15 +111,6 @@
                 },
                 "message": {
                     "type": "string"
-                }
-            }
-        },
-        "ping_response.Response": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string",
-                    "example": "pong"
                 }
             }
         },
