# swagger/responses/ping_controller/get_ping/success_response.go
@@ -1,9 +1,0 @@
-package get_ping
-
-import (
-    "gin-rest-api/responses/ping_response"
-)
-
-type SuccessResponse struct {
-    Data ping_response.Response `json:"data"`
-}
